1. fix bug 2. change video z-index

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,7 +36,7 @@ a {
     height:     15%;
     display: inline-block;
     white-space: nowrap;
-    z-index:    100;
+    z-index:    105;
     position: absolute;
     bottom: 0;
     right: 0;
